--- a/public/css/styles404.css
+++ b/public/css/styles404.css
@@ -5,11 +5,23 @@ body{
     color: red;
     text-align: center;
     font-family: 'Recursive', sans-serif;
-    font-size: 2.8rem;
+    font-size: 2.5rem;
 }
 img{
     display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 50%;
+}
+a{
+    text-decoration: none;
+    color: #da6854;
+}
+span{
+    color: #da6854;
+}
+h3{
+    color: seashell;
+    text-align: center;
+    font-size: 1.2rem;
 }
