--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,3 +36,53 @@ nav{
     font-size: 130%;
     font-family: 'Questrial', sans-serif;
 }
+.use{
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background: rgb(29,37,52);
+}
+.use-title{
+    text-align: center;
+    color: #dce8ff;
+    font-family: 'Arvo', serif;
+    font-size: 2.2rem;
+    padding-bottom: 1%;
+}
+.random-title{
+    text-align: center;
+    color: #665b5b;
+}
+.hitup{
+    padding-top: 1.2%;
+    font-size: 1.3rem;
+    text-align: center;
+    color: #ba9797;
+    font-family: 'Questrial', sans-serif;
+}
+.random-url{
+    text-align: center;
+    margin: 0 auto;
+    color: #e4ece5;
+    font-size: 1.4rem;
+}
+.random-url:hover{
+    color: #b1c5ff;
+}
+.diff-level{
+    text-align: center;
+    font-family: 'Arvo', serif;
+    color: #fff;
+    padding-top: 1%;
+}
+.what{
+    padding-top: 1.5%;
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    color: #b7b7bd;
+    font-size: 1.3rem;
+}
+.randomcode{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
