--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 .brand-name{
     display: inline-block;
-    font-family: 'Mali', cursive;
-    font-size: 130%;
+    font-family: 'Berkshire Swash', cursive;
+    font-size: 140%;
     margin: auto;
     padding-top: 0;
     padding-bottom: 0;
