--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,3 +175,11 @@ footer{
     color: #ddd;
     font-family: 'Alegreya', serif;
 }
+.tip{
+    text-align: center;
+    color: #ffe0e0;
+    padding-top: 4%;
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.2rem;
+    padding-bottom: 1.5%;
+}
