--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,6 +134,7 @@ nav{
     padding: 0;
     border: 2px solid #d5ebfc;
     border-radius: 20px;
+    margin: 0.5%;
 }
 .contactus{
     text-align: center;
