--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,3 +184,67 @@ footer{
     font-size: 1.2rem;
     padding-bottom: 1.5%;
 }
+.wall-of-fame{
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background: #665b5b;
+}
+.wof-mean{
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    color: #e7e9ee;
+    font-size: 1.2rem;
+    padding-top: 0.5%;
+    padding-bottom: 2%;
+}
+.make{
+    text-align: center;
+    font-family: 'Arvo', serif;
+    font-size: 1.5rem;
+    padding-bottom: 1%;
+    padding-top: 2%;
+    color: #dce8ff;
+}
+.hit-me{
+    text-align: center;
+    font-family: 'Questrial', sans-serif;
+    color: #ba9797;
+    font-size: 1.3rem;
+}
+.src{
+    font-family: 'Questrial', sans-serif;
+    color: #e1e2f5;
+    font-size: 1.1rem;
+}
+.imp{
+    color: #e1e2f5;
+    font-family: 'Questrial', sans-serif;
+    font-size: 1.1rem;
+}
+.maker{
+    color: #e1e2f5;
+    font-family: 'Questrial', sans-serif;
+    font-size: 1.1rem;
+}
+.wof-name{
+    text-align: center;
+    font-size: 1.2rem;
+    color: #fcfcfc;
+    font-family: 'Arvo', serif;
+}
+.column2{
+    padding: 1.4%;
+    border: 2px solid #677c8d;
+    border-radius: 20px;
+    margin: 0.5%;
+}
+.wof-que{
+    text-align: center;
+    font-size: 1rem;
+}
+.column3{
+    padding: auto;
+    border: 2px solid #677c8d;
+    border-radius: 20px;
+    margin: 0.5%;
+}
